--- a/views/home.html
+++ b/views/home.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello from Electron renderer!</title>
+    <title>JobOrganize</title>
     <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
     <h1>Hello from Electron renderer!</h1>
     <p>👋</p>
+    <button id="select-directories">Select Directories</button>
     <script src="../renderer/home.js"></script>
   </body>
 </html>
