feat: add form for job application

--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
     <h1>Hello from Electron renderer!</h1>
     <p>👋</p>
     <button id="select-directories">Select Directories</button>
+    <button id="application-form">Application Form</button>
     <script src="../renderer/home.js"></script>
   </body>
 </html>
