feat: add ui elements using sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,10 @@
+@import "components/button";
+@import "components/input-control";
+@import "components/card";
+@import "layout/container";
+@import "layout/flexbox";
+@import "layout/margins";
+
 * {
   margin: 0;
   padding: 0;
