--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,261 @@
+.btn-primary {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #4c00ff;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #fefeff;
+  color: #fefeff;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-primary:hover {
+  background-color: rgb(60.8, 0, 204);
+  color: white;
+}
+.btn-secondary {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #008593;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #fefeff;
+  color: #fefeff;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-secondary:hover {
+  background-color: rgb(0, 86.8571428571, 96);
+  color: white;
+}
+.btn-success {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #00be7b;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #fefeff;
+  color: #fefeff;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-success:hover {
+  background-color: rgb(0, 139, 89.9842105263);
+  color: white;
+}
+.btn-danger {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #c01247;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #fefeff;
+  color: #fefeff;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-danger:hover {
+  background-color: rgb(145.3714285714, 13.6285714286, 53.7571428571);
+  color: white;
+}
+.btn-outline-primary {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #4c00ff;
+  color: #4c00ff;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-outline-primary:hover {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(111.8, 51, 255);
+}
+.btn-outline-secondary {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #008593;
+  color: #008593;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-outline-secondary:hover {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(0, 179.1428571429, 198);
+}
+.btn-outline-secondary:hover {
+  background-color: rgb(0, 86.8571428571, 96);
+  color: white;
+  outline: none;
+}
+.btn-outline-danger {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  outline: 1px solid #c01247;
+  color: #c01247;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, outline 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.btn-outline-danger:hover {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(233.6571428571, 27.3428571429, 90.1857142857);
+}
+.btn-outline-danger:hover {
+  background-color: rgb(145.3714285714, 13.6285714286, 53.7571428571);
+  color: white;
+  outline: none;
+}
+
+.input-control {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+.input-control label {
+  flex: 1;
+  color: #000000;
+  padding: 0.2rem 0.5rem;
+}
+.input-control input {
+  flex: 1;
+  outline: 1px solid rgb(183.4, 153, 255);
+  border: none;
+  border-radius: 0.2rem;
+  font-size: 1rem;
+  padding: 0.2rem 0.5rem;
+  color: #333333;
+}
+.input-control input:focus {
+  outline: 1.5px solid #4c00ff;
+}
+.input-control-danger {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+.input-control-danger label {
+  flex: 1;
+  color: #000000;
+  padding: 0.2rem 0.5rem;
+}
+.input-control-danger input {
+  flex: 1;
+  outline: 1px solid rgb(242.4, 120.6, 157.7);
+  border: none;
+  border-radius: 0.2rem;
+  font-size: 1rem;
+  padding: 0.2rem 0.5rem;
+  color: #333333;
+}
+.input-control-danger input:focus {
+  outline: 1.5px solid #c01247;
+}
+.input-control-danger input {
+  outline: 1.5px solid #c01247;
+}
+.input-control-danger input:focus {
+  outline: 1.5px solid #4c00ff;
+}
+
+.card-small {
+  display: flex;
+  flex-direction: column;
+  width: 20rem;
+  padding: 2rem;
+  gap: 1rem;
+  overflow-wrap: break-word;
+}
+.card-medium {
+  display: flex;
+  flex-direction: column;
+  width: 40rem;
+  padding: 2rem;
+  gap: 1rem;
+  overflow-wrap: break-word;
+}
+.card-large {
+  display: flex;
+  flex-direction: column;
+  width: 60rem;
+  padding: 2rem;
+  gap: 1rem;
+  overflow-wrap: break-word;
+}
+
+.container {
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex {
+  display: flex;
+  gap: 1rem;
+}
+
+.flex-column {
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
 * {
   margin: 0;
   padding: 0;
