--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "components/button";
 @import "components/input-control";
 @import "components/card";
+@import "components/list";
+@import "components/modal";
 @import "layout/container";
 @import "layout/flexbox";
 @import "layout/margins";
