--- a/sass/components/_input-control.scss
+++ b/sass/components/_input-control.scss
@@ -9,10 +9,14 @@
   label {
     flex: 1;
     color: $neutral;
-    padding: 0.2rem 0.5rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    padding-right: 1rem;
   }
 
-  input {
+  input,
+  textarea,
+  select {
     flex: 1;
     outline: 1px solid lighten($color, 30%);
     border: none;
@@ -39,6 +43,16 @@
       &:focus {
         outline: 1.5px solid $primary;
       }
+    }
+  }
+
+  &-disabled {
+    @include input-control-base($primary);
+
+    input,
+    textarea,
+    select {
+      background: lighten($neutral, 90%);
     }
   }
 }
