feat: add view for company list, jobs list and job details

--- a/views/home.html
+++ b/views/home.html
@@ -16,6 +16,9 @@
         <button id="application-form" class="btn-secondary">
           Application Form
         </button>
+        <button id="list-of-companies" class="btn-secondary">
+          List of Companies
+        </button>
       </section>
     </main>
     <script src="../renderer/home.js"></script>
