--- a/views/applicationForm.html
+++ b/views/applicationForm.html
@@ -11,58 +11,65 @@
       <!-- Header section -->
       <h1>Application Form</h1>
 
-      <form id="application-form">
-        <div id="input-container" class="card-medium">
-          <div class="input-control">
-            <label for="company-name">Company Name</label>
-            <input type="text" name="company-name" id="company-name" />
-          </div>
+      <form id="application-form" class="card-medium">
+        <div class="input-control">
+          <label for="company-name">Company Name</label>
+          <input type="text" name="company-name" id="company-name" />
+        </div>
 
-          <div class="input-control">
-            <label for="job-role-name">Job Role</label>
-            <input type="text" name="job-role-name" id="job-role-name" />
-          </div>
+        <div class="input-control">
+          <label for="job-role-name">Job Role</label>
+          <input type="text" name="job-role-name" id="job-role-name" />
+        </div>
 
-          <div class="input-control">
-            <label for="job-posting-url">Job Posting URL</label>
-            <input type="text" name="job-posting-url" id="job-posting-url" />
-          </div>
+        <div class="input-control">
+          <label for="job-posting-url">Job Posting URL</label>
+          <input type="text" name="job-posting-url" id="job-posting-url" />
+        </div>
 
-          <div
-            id="recruiter-details-container"
-            class="flex flex-column"
-            style="display: none"
-          ></div>
-          <div
-            id="additional-details-container"
-            class="flex flex-column"
-            style="display: none"
-          ></div>
-          <div class="flex">
-            <button
-              id="add-new-recruiter"
-              type="button"
-              class="btn-outline-secondary"
-              style="flex: 1"
-            >
-              Add a Recruiter
-            </button>
-            <button
-              id="add-new-field"
-              type="button"
-              class="btn-outline-secondary"
-              style="flex: 1"
-            >
-              Add New Field
-            </button>
-          </div>
-          <button id="submit-btn" class="btn-success">Submit</button>
-          <button type="button" id="home" class="btn-outline-danger">
-            Cancel
+        <div class="input-control">
+          <label for="job-description" style="align-self: flex-start"
+            >Job Description</label
+          >
+          <textarea name="job-description" id="job-description"></textarea>
+        </div>
+
+        <div
+          id="recruiter-details-container"
+          class="flex flex-column"
+          style="display: none"
+        ></div>
+        <div
+          id="additional-details-container"
+          class="flex flex-column"
+          style="display: none"
+        ></div>
+        <div class="flex">
+          <button
+            id="form-add-new-recruiter"
+            type="button"
+            class="btn-outline-secondary"
+            style="flex: 1"
+          >
+            Add a Recruiter
+          </button>
+          <button
+            id="form-add-new-field"
+            type="button"
+            class="btn-outline-secondary"
+            style="flex: 1"
+          >
+            Add New Field
           </button>
         </div>
+        <button id="form-submit-btn" class="btn-success">Submit</button>
+        <button type="button" id="home" class="btn-outline-danger">
+          Cancel
+        </button>
       </form>
-      <script src="../renderer/applicationForm.js"></script>
     </main>
+    <script type="module" src="../renderer/applicationForm.js"></script>
+    <script type="module" src="../renderer/addFormFields.js"></script>
+    <script type="module" src="../utils/shared.js"></script>
   </body>
 </html>
