--- a/styles/main.css
+++ b/styles/main.css
@@ -158,9 +158,13 @@
 .input-control label {
   flex: 1;
   color: #000000;
-  padding: 0.2rem 0.5rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-right: 1rem;
 }
-.input-control input {
+.input-control input,
+.input-control textarea,
+.input-control select {
   flex: 1;
   outline: 1px solid rgb(183.4, 153, 255);
   border: none;
@@ -169,7 +173,9 @@
   padding: 0.2rem 0.5rem;
   color: #333333;
 }
-.input-control input:focus {
+.input-control input:focus,
+.input-control textarea:focus,
+.input-control select:focus {
   outline: 1.5px solid #4c00ff;
 }
 .input-control-danger {
@@ -181,9 +187,13 @@
 .input-control-danger label {
   flex: 1;
   color: #000000;
-  padding: 0.2rem 0.5rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-right: 1rem;
 }
-.input-control-danger input {
+.input-control-danger input,
+.input-control-danger textarea,
+.input-control-danger select {
   flex: 1;
   outline: 1px solid rgb(242.4, 120.6, 157.7);
   border: none;
@@ -192,7 +202,9 @@
   padding: 0.2rem 0.5rem;
   color: #333333;
 }
-.input-control-danger input:focus {
+.input-control-danger input:focus,
+.input-control-danger textarea:focus,
+.input-control-danger select:focus {
   outline: 1.5px solid #c01247;
 }
 .input-control-danger input {
@@ -201,11 +213,45 @@
 .input-control-danger input:focus {
   outline: 1.5px solid #4c00ff;
 }
+.input-control-disabled {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+.input-control-disabled label {
+  flex: 1;
+  color: #000000;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-right: 1rem;
+}
+.input-control-disabled input,
+.input-control-disabled textarea,
+.input-control-disabled select {
+  flex: 1;
+  outline: 1px solid rgb(183.4, 153, 255);
+  border: none;
+  border-radius: 0.2rem;
+  font-size: 1rem;
+  padding: 0.2rem 0.5rem;
+  color: #333333;
+}
+.input-control-disabled input:focus,
+.input-control-disabled textarea:focus,
+.input-control-disabled select:focus {
+  outline: 1.5px solid #4c00ff;
+}
+.input-control-disabled input,
+.input-control-disabled textarea,
+.input-control-disabled select {
+  background: rgb(229.5, 229.5, 229.5);
+}
 
 .card-small {
   display: flex;
   flex-direction: column;
-  width: 20rem;
+  width: min(100%, 20rem);
   padding: 2rem;
   gap: 1rem;
   overflow-wrap: break-word;
@@ -213,7 +259,7 @@
 .card-medium {
   display: flex;
   flex-direction: column;
-  width: 40rem;
+  width: min(100%, 40rem);
   padding: 2rem;
   gap: 1rem;
   overflow-wrap: break-word;
@@ -221,14 +267,54 @@
 .card-large {
   display: flex;
   flex-direction: column;
-  width: 60rem;
+  width: min(100%, 60rem);
   padding: 2rem;
   gap: 1rem;
   overflow-wrap: break-word;
 }
 
+.list {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 1rem 0;
+}
+.list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid rgb(127.5, 127.5, 127.5);
+  border-top: 1px solid rgb(127.5, 127.5, 127.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  height: 500px;
+  width: 700px;
+  background: #fefeff;
+  box-shadow: 0px 2px 5px 0px #000000;
+  border-radius: 10px;
+}
+.modal-sm {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  height: 5rem;
+  width: 25rem;
+  background: #fefeff;
+  box-shadow: 0px 2px 5px 0px #000000;
+  border-radius: 10px;
+}
+
 .container {
-  margin: 2rem auto;
+  margin: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -241,11 +327,18 @@
 
 .flex-column {
   flex-direction: column;
-  gap: 1rem;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
 }
 
 .mt-1 {
